# advent-of-code

./: .gitignore  Cargo.toml  README.md
crates/advent-macros/: Cargo.toml
crates/advent-macros/src/: lib.rs
src/: main.rs
src/days/: data_days.json  day15_2020.rs  day16_2020.rs  day1_2022.rs  day4_2020.rs  mod.rs
src/days/year_0/: day_0.rs  mod.rs
src/days/year_2020/: day_15.rs  day_16.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  mod.rs
src/days/year_2021/: day_23.rs  day_24.rs  mod.rs
src/days/year_2022/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  mod.rs
src/days/year_2025/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_8.rs  mod.rs
src/inputs/: day15_2020.txt  day5_2025sample.txt
