[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
itertools = "0.10"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1               
overflow-checks = false     
