[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
itertools = "0.14"
parse-display = "0.10"
advent-macros = { path = "crates/advent-macros" }

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1
overflow-checks = false
